--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9QwCPO9QfcRjOK38zq-dK4r-bXobbTkGpR4eRXC4&s">
+	<h1>NTR Jr.</h1>
+	<a href ="https://google.com">linkedIn</a>
+	<section for="skills">
+		<ul id = skills>
+			<li>acting</li>
+			<li>dancing</li>
+		</ul>
+	</section>
+	<section for ="projects">
+		<ul id="projects">
+			<li>RRR</li>
+			<li>NTR 30</li>
+			
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
