--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9QwCPO9QfcRjOK38zq-dK4r-bXobbTkGpR4eRXC4&s">
 	<h1>NTR Jr.</h1>
-	<a href ="https://google.com">linkedIn</a>
+	<a href ="www.linkedin.com/in/suresh-vadde-9aa874224">linkedIn</a>
 	<section for="skills">
 		<ul id = skills>
 			<li>acting</li>
